--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url:              http://danbelling.me
 owner:
   name:           Dan
   avatar:         avatar.png
-  bio:            ""
+  bio:            "There's no place like 127.0.0.1"
   email:          danhbelling@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        dannybeeeee
